--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "@ot-bms-tickets/common",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/index.js",
+  "types":"build/index.d.ts",
+  "files":[
+    "build/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean":"del-cli .build/*",
+    "build": "npm run clean && tsc",
+    "pub":"git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "del-cli": "^6.0.0",
+    "typescript": "^5.7.2"
+  }
 }
