--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@ot-bms-tickets/common",
   "version": "1.0.1",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
   "files": [
     "build/**/*"
   ],
